[tool.poetry]
name = "api-project"
version = "0.1.0"
description = ""
authors = ["nathancaran <caran494@hsd.k12.or.us>"]
readme = "README.md"
packages = [{include = "api_project"}]

[tool.poetry.dependencies]
python = "^3.9"
pyqt6 = "^6.6.1"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
